agrega sequelize y rutas

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "estructura basica de api",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Erlan Maldonado Correa",
